# monument-reverb

./: .clang-format  .editorconfig  .gitignore  .gitmodules  01072026-ArchitectureReview.md  01072026-CodeReview.md  01082026-ArchitectureReview.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_REVIEW.md  ASSET_GENERATION_COMPLETE.md  ASSET_GENERATION_SUMMARY.md  ArchitectureReview.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_OPTIMIZATION_RESULTS.md  CMakeLists.txt  CONTRIBUTING.md  DSP_CLICK_ANALYSIS_REPORT.md  ImplementationPlan.md  LICENSE  MODULATION_TESTING_GUIDE.md  MONUMENT_MANIFEST.md  NEXT_SESSION_HANDOFF.md  NEXT_SESSION_START.md  PHASE_2_VALIDATION_TEST.md  QUICK_START_MACRO_TESTING.md  README.md  Roadmap.md  STANDARD_BUILD_WORKFLOW.md  TASK_3_VALIDATION_SUMMARY.md  TESTING.md  WEEK_1_DAY_1_SUMMARY.md  extract_assets.py  extract_particles.py  generate_industrial_pbr.py  generate_metal_pbr.py  juce-dsp-audio-plugin.skill  monument_profile_export.xml  (+2 more)
.claude/: settings.json
MonumentUI_Demo/: CMakeLists.txt  NEXT_SESSION_CHECKLIST.md  PBR_ASSETS_COMPLETE.md  README.md  SESSION_HANDOFF.md  pbr_layer_showcase.html
MonumentUI_Demo/Assets/webview/: knob_demo.html  knob_demo_embedded.html
MonumentUI_Demo/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
MonumentUI_Demo/Source/Components/: FilmstripKnobDemo.cpp  FilmstripKnobDemo.h  StoneKnobDemo.cpp  StoneKnobDemo.h  WebViewKnobDemo.cpp  WebViewKnobDemo.h
MonumentUI_Demo/Source/UI/: AssetManager.cpp  AssetManager.h  MonumentBodyComponent.cpp  MonumentBodyComponent.h  Theme.h
Skills/juce-audio-graphics-architect/assets/templates/cmake-plugin/: CMakeLists.txt
UI Mockup/: ASSET_GENERATION_WORKFLOW.md  assetStrategy.md  juceDemoProject.md  knobAnimation.md  knobCurvesAudioReactive.md  knobPrompts.md  panelReplacementMapping.md  presetMorphingVisuals.md  projectHardeningPrompts.md  projucerBinaryData.md  prompts.md
claude-audio-dsp/: CLAUDE.md  QUICK_REFERENCE.md  README.md
docs/: ADVANCED_FEATURES.md  ARCHITECTURE_REVIEW.md  ARCHIVE_VERIFICATION_REPORT.md  BUILD_PATTERNS.md  CTEST_FAILURES.md  DOCUMENTATION_HYGIENE_REVIEW.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DSP_ARCHITECTURE.md  DSP_ARCHITECTURE_COMPREHENSIVE_REVIEW.md  DSP_SIGNAL_FLOW_BASICS.md  EXPERIMENTAL_PRESETS.md  EXPERIMENTAL_PRESETS_ENHANCEMENT_PATCHES.md  INDEX.md  MONUMENT_BRUTALIST_INTEGRATION.md  MONUMENT_FEATURE_CHECKLIST.md  MONUMENT_THRESHOLD_TUNING_LOG.md  MONUMENT_VALIDATION_CHECKLIST.md  MONUMENT_VALIDATION_REPORT.md  Monument_User_Manual.html  Monument_v1.0_Pre-Memory_Validation.md  PARAMETER_BEHAVIOR.md  PERFORMANCE_BASELINE.md  PHASE_1_CONSOLIDATION_COMPLETE.md  PHASE_2_BASELINE_VALIDATION_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE_SUMMARY.md  PRESET_GALLERY.md  QUALITY_GATES.md  QUICK_FIXES_SUMMARY.md  README.md  SESSION_2026_01_08_PHASE_3_4_COMPLETE.md  SESSION_HANDOFF_PHASE2_COMPLETE_PHASE3_START.md  SESSION_HANDOFF_PHASE2_SCENARIOS.md  STATUS.md  STRESS_TEST_PLAN.md  TESTING.md  TESTING_GUIDE.md  UI_FULL_RESET_2026_01_08.md  UI_RESET_2026_01_08.md
dsp/: AlienAmplification.cpp  AlienAmplification.h  AllpassDiffuser.cpp  AllpassDiffuser.h  Chambers.cpp  Chambers.h  DspModule.h  DspModules.cpp  DspModules.h  DspRoutingGraph.cpp  DspRoutingGraph.h  ElasticHallway.cpp  ElasticHallway.h  ExperimentalModulation.cpp  ExperimentalModulation.h  ExpressiveMacroMapper.cpp  ExpressiveMacroMapper.h  MacroMapper.cpp  MacroMapper.h  MemoryEchoes.cpp  MemoryEchoes.h  MemorySystem.h  ModulationMatrix.cpp  ModulationMatrix.h  ModulationSources.h  MonumentDSP.cpp  MonumentDSP.h  ParameterBuffers.h  ParameterSmoother.cpp  ParameterSmoother.h  SequencePresets.cpp  SequencePresets.h  SequenceScheduler.cpp  SequenceScheduler.h  SimdHelpers.h  SpatialProcessor.cpp  SpatialProcessor.h  TubeRayTracer.cpp  TubeRayTracer.h
patches/: infinite_abyss_memory_fix.patch
playground/: AudioEngine.cpp  AudioEngine.h  ComponentPack.cpp  ComponentPack.h  LayerCompositor.cpp  LayerCompositor.h  MainComponent.cpp  MainComponent.h  PlaygroundApp.cpp
plugin/: PluginEditor.cpp  PluginEditor.h  PluginEditorV2.cpp  PluginEditorV2.h  PluginEditor_NEW.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
qa/: main.cpp  monument_adapter.cpp  monument_adapter.h
scripts/: README.md  analyze_all_presets.sh  analyze_experimental_presets.py  analyze_knob_images.py  analyze_profile.py  batch_mask_hero_knobs_grabcut.py  build_macos.sh  capture_all_presets.sh  create_hero_knob_rgba.py  dev_loop.sh  download_textures.sh  extract_knob_layers.py  generate_audio_demos.py  generate_knob_blender.py  generate_knob_blender_enhanced.py  generate_knob_hero.py  generate_knob_prompts.py  generate_monument_knob_pbr.py  generate_verified_orthographic_knob.py  install_macos.sh  mask_hero_knobs.py  mask_with_circle_detection.py  mask_with_color_distance.py  mask_with_edge_detection.py  mask_with_ellipse_fit.py  mask_with_grabcut.py  open_xcode.sh  pack_hero_knob_pbr.py  preview_knob_composite.py  preview_knob_composite_enhanced.py  process_codex_knob.py  professional_knob_geometry.py  profile_cpu.sh  profile_in_reaper.sh  profile_with_audio.sh  rebuild_and_install.sh  regenerate_albedo_orthographic.py  remask_all_hero_knobs.py  remask_single_knob.py  render_with_real_materials.py  (+7 more)
test-results/: README.md
tests/: ConstantPowerPanningTest.cpp  DelayDspTest.cpp  DopplerShiftTest.cpp  DspInitializationTest.cpp  DspRoutingGraphTest.cpp  ExperimentalModulationTest.cpp  ExpressiveMacroDemo.cpp  FeedbackMixSafetyTest.cpp  FoundationTest.cpp  LatencyTest.cpp  MacroModeIntegrationTest.cpp  MatrixAnalysisTest.cpp  MemoryEchoesHarness.cpp  MemoryEchoesTest.cpp  ModulationMatrixTest.cpp  NovelAlgorithmsTest.cpp  OutputSafetyClipTest.cpp  ParameterBufferTest.cpp  ParameterSmoothingTest.cpp  ParameterStressTest.cpp  PerformanceBenchmarkTest.cpp  PillarsZipperTest.cpp  README.md  ReverbDspTest.cpp  SequenceSchedulerTest.cpp  SpatialDspTest.cpp  StateManagementTest.cpp  StereoWidthTest.cpp  TimelineIntegrationTest.cpp  smoke-test.cpp
ui/: HeaderBar.cpp  (+28 more)
(+507 files in other folders)
